<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonitorAFIFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectActivity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/activitySpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="9"
                    android:entries="@array/defaultActivities" />

                <Button
                    android:id="@+id/addActivityButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus_sign" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:entries="@array/days" />

                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:entries="@array/months" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="2"
                    android:entries="@array/years" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/beginMinutesSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:entries="@array/minutes" />

                <Spinner
                    android:id="@+id/beginHoursSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:entries="@array/hours" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora_termino" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/endMinutesSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:entries="@array/minutes" />

                <Spinner
                    android:id="@+id/endHoursSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:entries="@array/hours" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView4"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration" />

            <EditText
                android:id="@+id/durationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number"
                android:text="@string/one" />


            <Button
                android:id="@+id/submitButton"
                style="@style/menuButtom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/guardar" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</androidx.constraintlayout.widget.ConstraintLayout>