<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonitorAFActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activityTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/activity" />

            <Spinner
                android:id="@+id/activitySpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:entries="@array/defaultActivities" />

            <Button
                android:id="@+id/addActivityButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus_sign"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startDateView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fecha" />

            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:entries="@array/days" />

            <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:entries="@array/months" />

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:entries="@array/years" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/hora" />

            <Spinner
                android:id="@+id/hoursSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:entries="@array/hours" />

            <Spinner
                android:id="@+id/minutesSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:entries="@array/minutes" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/duration" />

            <EditText
                android:id="@+id/durationEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:inputType="number"
                android:text="1"/>

        </LinearLayout>


        <Button
            android:id="@+id/submitButton"
            style="@style/menuButtom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />


    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>